# game_of_life

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
include/: app.hpp  config.hpp  console.hpp  controller.hpp  font8x8_basic.hpp  gl_wrappers.hpp  grid.hpp  grid_opt.hpp  luaengine.hpp  renderer.hpp  shader.hpp  shaders_sources.hpp  state.hpp  window.hpp
resources/: gol.rc.in
src/: app.cpp  config.cpp  console.cpp  controller.cpp  gl_wrappers.cpp  grid.cpp  grid_opt.cpp  luaengine.cpp  main.cpp  renderer.cpp  shader.cpp  state.cpp  window.cpp
